--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "mocha test/test.js",
     "prepare": "rollup -c",
-    "build": "lezer-generator src/syntax.grammar -o src/parser && rollup -c"
+    "build": "lezer-generator src/coem.grammar -o src/parser && rollup -c"
   },
   "type": "module",
   "main": "dist/index.cjs",
